# deploy

./: .gitignore  README.md
ncnn/yolov5-ncnn/: .gitignore  CMakeCache.txt  CMakeLists.txt
onnx/onnx_graphsurgeon/: creatop.py  cutgraph.py  deleteop.py  layer.py  layerapi_model.onnx  model.onnx  modified.onnx  modified.py  removed.onnx  removing.onnx  replace.py  replaced_model.onnx  replacing_model.onnx  shape.py  shape_op.onnx  subgraph.onnx
ppq/: quantization.py
tensorRT_Pro-main/: CMakeLists.txt
tensorRT_Pro-main/example-simple_yolo/: CMakeLists.txt
tensorRT_Pro-main/example-simple_yolo/a1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cucodes.vcxproj  pro.sln  pro.vcxproj  run.vcxproj.filters
torch/yolov5-torch/: export.py
torch/yolov5-torch/models/: yolo.py
trt/plugin_example/: CMakeLIsts.txt  onnxplugin.py
trt/plugin_example/include/: builder.hpp  custom.h
trt/plugin_example/src/: builder.cpp  custom.cu  infer.cpp
trt/plugin_example/workspace/Debug/: model.onnx  model.trt
trt/tensorRT_repo/: CMakeLists.txt
trt/tensorRT_repo/example-simple_yolo/: CMakeLists.txt
trt/tensorRT_repo/example-simple_yolo/a1/: cucodes.vcxproj.filters  pro.vcxproj.filters  run.vcxproj
trt/tensorRT_repo/example-simple_yolo/src/: main.cpp
trt/yolov5/: CMakeLists.txt
trt/yolov5/include/: builder.hpp  infer.hpp
trt/yolov5/src/: builder.cpp  infer.cpp  infer.md  main.cpp
trt/yolov8/: CMakeLists.txt
trt/yolov8/include/: infer.hpp  nms.h
trt/yolov8/src/: infer.cpp  main.cpp  nms.cu
yolov5/yolov5-ncnn/: imagelist.txt  information.txt  yolov5_infer.cpp
yolov5/yolov5-ppq/: generate_data.py  onnxmodelset.py  ppq.rar  quantization.py
yolov5/yolov5-ppq/working/: lfp.onnx  quant_cfg.table  yolov5s-ncnn-int8.param  yolov5s-ppq-int8.param
yolov5/yolov5-torch/: export.py  testonnx.py  yolov5s.param
